force-app/main/default/objects/course__c/fields/course_name__c.field-meta.xml
<CustomField>
    <fullName>course_name__c</fullName>
    <label>course name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>