force-app/main/default/objects/course__c/fields/fee1__c.field-meta.xml
<CustomField>
    <fullName>fee1__c</fullName>
    <label>fee1</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>