force-app/main/default/objects/course__c/fields/fee2__c.field-meta.xml
<CustomField>
    <fullName>fee2__c</fullName>
    <label>fee2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>