force-app/main/default/objects/course__c/fields/total_fee__c.field-meta.xml
<CustomField>
    <fullName>total_fee__c</fullName>
    <description>sum value</description>
    <formula>fee1__c  +  fee2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>total fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>